[package]
name = "fastlanes"
version = "0.1.5"
description = "Rust implementation of the FastLanes compression layout"
license = "Apache-2.0"
homepage = "https://github.com/spiraldb/fastlanes"
repository = "https://github.com/spiraldb/fastlanes"
authors = ["SpiralDB <hello@spiraldb.com>"]
keywords = ["fastlanes", "compression", "codec"]
edition = "2021"

[dependencies]
arrayref = "0.3.7"
num-traits = "0.2.19"
paste = "1.0.15"
seq-macro = "0.3.5"

[dev-dependencies]
arrayref = "0.3.7"
criterion = "0.5.1"

[lints.rust]
warnings = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cast_possible_truncation = "allow"
if_then_some_else_none = "deny"
mem_forget = "deny"
multiple_inherent_impl = "deny"
or_fun_call = "deny"
panic = "deny"
same_name_method = "deny"
self_named_module_files = "deny"
tests_outside_test_module = "deny"
unreachable = "deny"
unwrap_used = "deny"
unwrap_in_result = "deny"
use_debug = "deny"

[[bench]]
name = "bitpacking"
harness = false

[[bench]]
name = "delta"
harness = false

[[bench]]
name = "transpose"
harness = false
